create-license/main/default/objects/Contract/fields/IsAirgapEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsAirgapEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer is allowed to install into airgap environments</description>
    <inlineHelpText>Include airgap installation in customer license?</inlineHelpText>
    <label>Airgap</label>
    <type>Checkbox</type>
</CustomField>