create-license/main/default/objects/Contract/fields/IsSnapshotSupported__c.field-meta.xml
<CustomField>
    <fullName>IsSnapshotSupported__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer can take snaphots backup/restore of the application</description>
    <inlineHelpText>Include snapshots in customer license</inlineHelpText>
    <label>Snapshots</label>
    <type>Checkbox</type>
</CustomField>