create-license/main/default/objects/Contract/fields/IsSupportBundleUploadEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsSupportBundleUploadEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Customer can directly upload support bundles from the Admin Console when their installation is online</description>
    <inlineHelpText>Include support bundle upload in customer license</inlineHelpText>
    <label>Support Bundle Upload</label>
    <type>Checkbox</type>
</CustomField>