create-license/main/default/objects/Contract/validationRules/ValidateIsSupportBundleUploadEnabled.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateIsSupportBundleUploadEnabled</fullName>
    <active>true</active>
    <errorConditionFormula>AND( IsSupportBundleUploadEnabled__c  = TRUE, NOT( IsAdminConsoleEnabled__c ))</errorConditionFormula>
    <errorDisplayField>IsSupportBundleUploadEnabled__c</errorDisplayField>
    <errorMessage>Enabling support bundle upload requires the Admin Console also be enabled</errorMessage>
</ValidationRule>